--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
  background-color: #cce6ff;
 }
+
 header{
  text-align: center;
  height: 100px;
@@ -9,17 +10,24 @@ header{
  color: #FFFFFF;
  font-size: x-large;
 }
+
 h3{
  margin-top: 2px;
  text-align: center;
  background-color: #80bfff;
 }
+
 form{
  width: 45%;
  display: inline-block;
  margin: 20px;
 }
+
 footer{
  margin-top: 3%;
  text-align: center;
 }
+
+fieldset{
+	background-color: #eeeeee;
+}	
