--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 /*
-CSS FOR AUDITION-FORM PAGE
+CSS FOR INDEX PAGE
 */
 
 
@@ -21,36 +21,46 @@ CSS FOR AUDITION-FORM PAGE
   background-color: black;
 }
 
+
 /* Header Attributes */
-header {
-  background-color: black;
-  padding: 10px;
-  color: white;
-}
 h1 {
   text-align: center;
-  padding-top: 5px;
 }
 
 
-/* Container */
-.container{
+/* Containers */
+.container {
   background-color: lightgray;
-  padding-bottom: 2%;
-  max-width: fit-content;
+  padding-top: 2%;
+  padding-bottom: 4%;
 }
+
+
+/* Rows */
+.row {
+  display: flex;
+  align-items: center;
+  padding-right: 5%;
+  padding-left: 5%;
+}
+
 
 /* Columns */
-.col-sm,.col-sm-8, .col-sm-4, .col, .col-sm-6 {
-  padding-top: 15px;
+.col-lg {
+  padding: 2%;
+  background-color: lightgray;
 }
 
-/* Paragraphs & Labels */
-label {
-  padding-bottom: 5px;
-}
+
+/* Paragraphs */
 p {
   font-size: large;
   padding: 10px;
 }
 
+
+/* Text used for captions underneath the photos */
+.text-center {
+  color: #555555;
+  font-size: smaller;
+}
